# rust-fmindex-benchmark

./: .gitignore  Cargo.toml  README.md  justfile
plots/: main.py  pyproject.toml
src/: awry_bench.rs  bio_bench.rs  build.rs  common_interface.rs  fmindex_bench.rs  genedex_bench.rs  lt_and_sview_fmindex_bench.rs  main.rs  search.rs  sview_fmindex_bench.rs
