[package]
name = "rust-fmindex-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.11"

clap = { version = "4.5", features = ["derive"] }
log = "0.4"
fern = "0.7"

genedex = { version = "0.1.0", path = "../genedex" }

bio = "2.3"
serde = "1"
bincode = { version = "2", features = ["serde"] }

awry = "0.3"

fm-index = "0.3"

sview-fmindex = { version = "0.1", features = ["fastbwt"] }
lt-fm-index = { version = "0.7", features = ["fastbwt"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# [profile.release]
# debug = true
