[package]
name = "rust-fmindex-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.11"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
fern = "0.7"
serde = "1"
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }

genedex = { version = "0.2.2" }

bio = "3"
bincode = { version = "2", features = ["serde"] }

awry = "0.3"

fm-index = "0.3"

sview-fmindex = { version = "0.1", features = ["fastbwt"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
debug = true
